--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qemu (1:6.1+dfsg-1) UNRELEASED; urgency=medium
+
+  * new upstream release (6.1.0)
+  * refresh patches, remove patches which were applied upstream
+
+ -- Michael Tokarev <mjt@tls.msk.ru>  Tue, 17 Aug 2021 19:12:42 +0300
+
 qemu (1:6.0+dfsg-4) unstable; urgency=medium
 
   * d/rules: fix last ubuntu merge, xen is x86-only, not all-debian
