--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,25 @@
-qemu (1:6.1+dfsg-2) UNRELEASED; urgency=medium
+qemu (1:6.1+dfsg-2) unstable; urgency=medium
 
+  * rearrange d/rules to be able to configure/build/install
+    various different kinds of qemu builds (main/microvm/xen/static)
+    separately, by splitting targets of d/rules into subtargets
+  * enable many virtio devices for microvm build (Closes: #992029)
+  * disable libudev and fuse for microvm build
+  * rearrange options for microvm build in d/rules
+  * tidy newly added assert in unix-domain socket handling code
+    to account for extra \0 terminator for socket pathname,
+    socket-unix-maxlen.patch (Closes: #993145)
+  * upstream qemu added ignoring of *.patch to .gitignore,
+    unignore them in d/.gitignore
+  * re-add 4 patches which were lost from git
+    during preparation for 6.1
+    (not affecting the source package)
   * uas-add-stream-number-sanity-checks-CVE-2021-3713.diff
     Closes: #992727, CVE-2021-3713
   * Mention (some) bugs closed by 6.1 upstream
   * Mention closing of #947349
 
- -- Michael Tokarev <mjt@tls.msk.ru>  Wed, 25 Aug 2021 16:24:06 +0300
+ -- Michael Tokarev <mjt@tls.msk.ru>  Tue, 31 Aug 2021 02:01:51 +0300
 
 qemu (1:6.1+dfsg-1) unstable; urgency=medium
 
