--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+qemu (1:6.1+dfsg-5) unstable; urgency=medium
+
+  * updated debian/patches/linux-user-binfmt-P.diff
+    to work with in-kernel code
+    Closes: #993658
+  * d/rules: do not mark configure target as .PHONY
+    since it is a real file
+
+ -- Michael Tokarev <mjt@tls.msk.ru>  Mon, 06 Sep 2021 01:20:59 +0300
+
 qemu (1:6.1+dfsg-4) unstable; urgency=medium
 
   * qemu-sockets-fix-unix-socket-path-copy-again.patch
