--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-qemu (1:6.1+dfsg-7) UNRELEASED; urgency=medium
+qemu (1:6.1+dfsg-7) unstable; urgency=medium
 
   * qemu-system-data: do not install qemu.desktop (Closes: #995628)
   * remove qemu-user-static.README.Debian (#995633)
@@ -15,7 +15,7 @@ qemu (1:6.1+dfsg-7) UNRELEASED; urgency=medium
   * quieten gcc11 warnings/errors so roms will compile (Closes: #997082)
   * move d/qemu-system-data.install to d/rules
 
- -- Michael Tokarev <mjt@tls.msk.ru>  Mon, 25 Oct 2021 13:46:49 +0300
+ -- Michael Tokarev <mjt@tls.msk.ru>  Tue, 26 Oct 2021 10:35:02 +0300
 
 qemu (1:6.1+dfsg-6) unstable; urgency=medium
 
