mention closing of a few CVEs by 6.2.0

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,12 @@ qemu (1:6.2+dfsg-1) unstable; urgency=medium
 
   [ Christian Ehrhardt ]
   * 6.2.0 upstream release
+    Closes: #984452, CVE-2021-20203
+     (integer overflow issue in the vmxnet3 NIC emulator)
+    Closes: #984453, CVE-2021-20196
+     (fdc: check drive block device before usage)
+    Closes: #984451, CVE-2021-20255
+     (infinite recursion / DMA reentrancy in eepro100 i8255x device emulator)
   * d/get-orig-source.sh: remove pc-bios/multiboot_dma.bin in dfsg-clean
   * Drop patches upstream in v6.2.0
   * d/p/spelling.diff: update for v6.2.0 (partially accepted)
