update changelog, upload 6.2+dfsg-2 to unstable

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+qemu (1:6.2+dfsg-2) unstable; urgency=medium
+
+  * bump meson build-dep to 0.59.3
+  * build & include multiboot_dma.bin (Closes: #1003930)
+  * libxml2 is not needed for parallels.
+    Enable parallels block image format (Closes: #1003162)
+  * acpi-validate-hotplug-selector-on-access-CVE-2021-4158.patch
+    Closes: CVE-2021-4158
+  * acpi-fix-QEMU-crash-when-started-with-SLIC-table.patch
+    (Closes: #1004017)
+  * acpi-fix-OEM_ID-padding.patch
+  * debian/get-orig-source.sh: repack dfsg archive differently
+  * mention closing of a few CVEs by 6.2.0
+
+ -- Michael Tokarev <mjt@tls.msk.ru>  Thu, 20 Jan 2022 10:52:19 +0300
+
 qemu (1:6.2+dfsg-1) unstable; urgency=medium
 
   [ Christian Ehrhardt ]
